@@ -827,6 +827,24 @@ set_config_log(struct s3b_config *config, log_func_t *log)
 
 // Hashing stuff
 
+#if OPENSSL_VERSION_NUMBER >= 0x30000000
+
+struct hmac_engine {
+    EVP_MAC         *hmac;
+};
+
+struct hmac_ctx {
+    EVP_MAC_CTX     *ctx;
+    char            digest[32];
+    OSSL_PARAM      params[2];
+    int             reslen;
+    int             active;
+};
+
+static struct hmac_ctx *hmac_new(EVP_MAC *hmac, const char *digest, size_t reslen, const void *key, size_t keylen);
+
+#else   /* use older HMAC API */
+
 struct hmac_engine {
     const EVP_MD    *mac_sha1;
     const EVP_MD    *mac_sha256;
@@ -841,6 +859,8 @@ struct hmac_ctx {
 
 static struct hmac_ctx *hmac_new(const EVP_MD *md, size_t reslen, const void *key, size_t keylen);
 
+#endif
+
 struct hmac_engine *
 hmac_engine_create(void)
 {
@@ -848,27 +868,22 @@ hmac_engine_create(void)
 
     // Allocate structure
     if ((engine = malloc(sizeof(*engine))) == NULL)
-        goto fail0;
+        return NULL;
+    memset(engine, 0, sizeof(*engine));
 
-    // Get SHA1
-    if ((engine->mac_sha1 = EVP_sha1()) == NULL) {
+    // Get HMAC(s)
+#if OPENSSL_VERSION_NUMBER >= 0x30000000
+    if ((engine->hmac = EVP_MAC_fetch(NULL, "HMAC", NULL)) == NULL) {
         errno = ENOTSUP;
-        goto fail1;
+        return NULL;
     }
-
-    // Get SHA256
-    if ((engine->mac_sha256 = EVP_sha256()) == NULL) {
-        errno = ENOTSUP;
-        goto fail1;
-    }
+#else
+    engine->mac_sha1 = EVP_sha1();
+    engine->mac_sha256 = EVP_sha256();
+#endif
 
     // Done
     return engine;
-
-fail1:
-    free(engine);
-fail0:
-    return NULL;
 }
 
 void
@@ -880,37 +895,70 @@ hmac_engine_free(struct hmac_engine *engine)
 struct hmac_ctx *
 hmac_new_sha1(struct hmac_engine *engine, const void *key, size_t keylen)
 {
+#if OPENSSL_VERSION_NUMBER >= 0x30000000
+    return hmac_new(engine->hmac, "SHA1", SHA_DIGEST_LENGTH, key, keylen);
+#else
     return hmac_new(engine->mac_sha1, SHA_DIGEST_LENGTH, key, keylen);
+#endif
 }
 
 struct hmac_ctx *
 hmac_new_sha256(struct hmac_engine *engine, const void *key, size_t keylen)
 {
+#if OPENSSL_VERSION_NUMBER >= 0x30000000
+    return hmac_new(engine->hmac, "SHA256", SHA256_DIGEST_LENGTH, key, keylen);
+#else
     return hmac_new(engine->mac_sha256, SHA256_DIGEST_LENGTH, key, keylen);
+#endif
 }
 
 static struct hmac_ctx *
+#if OPENSSL_VERSION_NUMBER >= 0x30000000
+hmac_new(EVP_MAC *hmac, const char *digest, size_t reslen, const void *key, size_t keylen)
+#else
 hmac_new(const EVP_MD *md, size_t reslen, const void *key, size_t keylen)
+#endif
 {
     struct hmac_ctx *ctx;
+    int r;
 
     if ((ctx = malloc(sizeof(*ctx))) == NULL)
         return NULL;
+    memset(ctx, 0, sizeof(*ctx));
+#if OPENSSL_VERSION_NUMBER >= 0x30000000
+    if ((ctx->ctx = EVP_MAC_CTX_new(hmac)) == NULL) {
+        r = ENOMEM;
+        goto fail;
+    }
+    snvprintf(ctx->digest, sizeof(ctx->digest), "%s", digest);
+    ctx->params[0] = OSSL_PARAM_construct_utf8_string("digest", ctx->digest, 0);
+    ctx->params[1] = OSSL_PARAM_construct_end();
+#else
     if ((ctx->ctx = HMAC_CTX_new()) == NULL) {
-        free(ctx);
-        return NULL;
+        r = ENOMEM;
+        goto fail;
     }
     ctx->md = md;
+#endif
     ctx->reslen = reslen;
     ctx->active = 0;
     hmac_reset(ctx, key, keylen);
     return ctx;
+
+fail:
+    free(ctx);
+    errno = r;
+    return NULL;
 }
 
 void
 hmac_reset(struct hmac_ctx *ctx, const void *key, size_t keylen)
 {
+#if OPENSSL_VERSION_NUMBER >= 0x30000000
+    EVP_MAC_init(ctx->ctx, key, keylen, ctx->params);
+#else
     HMAC_Init_ex(ctx->ctx, key, keylen, ctx->md, NULL);
+#endif
     ctx->active = 1;
 }
 
@@ -918,16 +966,28 @@ void
 hmac_update(struct hmac_ctx *ctx, const void *data, size_t len)
 {
     assert(ctx->active);
+#if OPENSSL_VERSION_NUMBER >= 0x30000000
+    EVP_MAC_update(ctx->ctx, data, len);
+#else
     HMAC_Update(ctx->ctx, data, len);
+#endif
 }
 
 void
 hmac_final(struct hmac_ctx *ctx, u_char *result)
 {
+#if OPENSSL_VERSION_NUMBER >= 0x30000000
+    size_t len;
+#else
     u_int len;
+#endif
 
     assert(ctx->active);
+#if OPENSSL_VERSION_NUMBER >= 0x30000000
+    EVP_MAC_final(ctx->ctx, result, &len, ctx->reslen);
+#else
     HMAC_Final(ctx->ctx, result, &len);
+#endif
     assert(ctx->reslen == len);
     ctx->active = 0;
 }
@@ -943,7 +1003,11 @@ hmac_free(struct hmac_ctx *ctx)
 {
     if (ctx == NULL)
         return;
+#if OPENSSL_VERSION_NUMBER >= 0x30000000
+    EVP_MAC_CTX_free(ctx->ctx);
+#else
     HMAC_CTX_free(ctx->ctx);
+#endif
     free(ctx);
 }
 
