@@ -6,6 +6,7 @@ Version Next
     - Fixed bug in zero cache "current_cache_size" stats value (issue #204)
     - Reuse cURL handles after normal HTTP error codes (issue #199)
     - Run modprobe(8) if needed when starting with the --nbd flag (issue #203)
+    - Use newer OpenSSL 3.0 API functions when available
 
 Version 2.0.2 released July 17, 2022
 
